--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@
 </div>
 
 <script src="script.js"></script>
+<script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
 </body>
 </html>
