Mise à jour du site Amazigh TV

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
 
       </div>
   </section>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '85d327bd7bc680a54c9d1b8821f7d634',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/85d327bd7bc680a54c9d1b8821f7d634/invoke.js"></script>
 
 </main>
 
