Mise à jour du site Amazigh TV

--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@
 <footer class="footer" id="contact">
   <p>&copy; 2025 Amazigh TV. Tous droits réservés.</p>
   <p>Contact: <a href="mailto:votre_email@example.com">votre_email@example.com</a></p>
+   <div class="visitor-badge-container">
+    <img src="https://visitor-badge.laobi.icu/badge?page_id=amazighflix-home&countColor=%23e50914&style=flat-square"
+         alt="Nombre de visiteurs" class="visitor-badge" />
+    <span class="visitor-text">Visites totales</span>
+  </div>
 </footer>
+
 
 <div id="modal-mega" class="modal">
   <div class="modal-content">
