Description de la modification

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		'params' : {}
 	};
 </script>
+<div id="ad-bait" class="ad-container-class ad-banner-300x250"></div>
 <script type="text/javascript" src="//www.highperformanceformat.com/85d327bd7bc680a54c9d1b8821f7d634/invoke.js"></script>
 
 </main>
@@ -95,7 +96,21 @@
   </div>
 </footer>
 
-
+<div id="modal-adblock" class="modal">
+    <div class="modal-content modal-adblock-content">
+        <div class="adblock-message">
+            <h3 class="adblock-title">Bloqueur de Publicité Détecté ! 🚫</h3>
+            <p class="adblock-text">
+                Nous sommes désolés, mais l'accès aux vidéos est bloqué tant que votre bloqueur de publicité est actif.
+                <br>
+                Notre contenu est financé par la publicité. Veuillez **désactiver AdBlock** ou **ajouter notre site en liste blanche** pour continuer à regarder vos films.
+            </p>
+            <p class="adblock-instruction">
+                Actualisez la page après la désactivation pour accéder au contenu.
+            </p>
+        </div>
+    </div>
+</div>
 <div id="modal-mega" class="modal">
   <div class="modal-content">
     <span class="close-button" data-modal-type="mega">&times;</span>
