--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       </article>
 
-      <article class="film-card" data-video-type="drive" data-video-id="video-drive-2">
+      <article class="film-card" data-video-type="mega" data-video-id="video-drive-2">
         <div class="film-poster">
           <img src="images/pucci4.jpg" alt="Pucci 4" loading="lazy">
           <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
