--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h3>Explorer les Œuvres</h3>
     <div class="film-grid">
 
-      <article class="film-card" data-video-type="mega" data-video-id="video-pucci1">
+      <article class="film-card" data-video-id="video-pucci1">
         <div class="film-poster">
           <img src="images/pucci1.jpg" alt="Pucci 1" loading="lazy">
           <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
@@ -59,7 +59,7 @@
         </div>
       </article>
 
-      <article class="film-card" data-video-type="youtube" data-video-id="video-youtube-1">
+      <article class="film-card" data-video-id="video-youtube-1">
         <div class="film-poster">
           <img src="images/pucci2.jpg" alt="Pucci 2" loading="lazy">
           <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
@@ -70,7 +70,7 @@
         </div>
       </article>
 
-      <article class="film-card" data-video-type="mega" data-video-id="video-drive-2">
+      <article class="film-card" data-video-id="video-drive-2">
         <div class="film-poster">
           <img src="images/pucci4.jpg" alt="Pucci 4" loading="lazy">
           <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
@@ -81,7 +81,7 @@
         </div>
       </article>
       
-      <article class="film-card" data-video-type="youtube" data-video-id="video-youtube-3">
+      <article class="film-card" data-video-id="video-youtube-3">
         <div class="film-poster">
           <img src="images/pucci5.jpg" alt="Pucci 5" loading="lazy">
           <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
@@ -92,7 +92,7 @@
         </div>
       </article>
       
-      <article class="film-card" data-video-type="mega" data-video-id="video-pucci6">
+      <article class="film-card" data-video-id="video-pucci6">
         <div class="film-poster">
           <img src="images/pucci3.jpg" alt="Pucci 3" loading="lazy">
           <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
@@ -156,5 +156,7 @@
 </div>
 
 <script src="script.js"></script>
+
+<script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
 </body>
 </html>
