--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
         </div>
       </article>
 
+      
+      <article class="film-card" data-video-id="video-qezbul1">
+        <div class="film-poster">
+          <img src="images/qezbul 1.jpg" alt="Qezbul 1" loading="lazy">
+          <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+        </div>
+        <div class="film-info">
+          <h4>Qezbul 1</h4>
+          <p>Comédie, 83 min</p>
+        </div>
+      </article>
+
+      
+
       <article class="film-card" data-video-id="video-youtube-1">
         <div class="film-poster">
           <img src="images/pucci2.jpg" alt="Pucci 2" loading="lazy">
