update: nouvelle version du site

--- a/index.html
+++ b/index.html
@@ -146,20 +146,13 @@
     <p>Une initiative de la communauté Kabyle. <a href="mailto:contact@amazightv.com">Contactez-nous</a></p>
     
     <!-- Nouveau système de statistiques -->
-    <div class="visitor-stats-container">
-      <div class="stat-item">
-        <div class="stat-number" id="total-visits">0</div>
-        <div class="stat-label">Visites totales</div>
-      </div>
-      <div class="stat-item">
-        <div class="stat-number" id="unique-visitors">0</div>
-        <div class="stat-label">Visiteurs uniques</div>
-      </div>
-      <div class="stat-item">
-        <div class="stat-number" id="returning-visitors">0</div>
-        <div class="stat-label">Visites répétées</div>
-      </div>
+   
+     <div class="visitor-badge-container">
+        <img src="https://visitor-badge.laobi.icu/badge?page_id=amazighflix-home&countColor=%23e50914&style=flat-square"
+             alt="Nombre de visiteurs" class="visitor-badge" />
+        <span class="visitor-text">Visites totales</span>
     </div>
+  </div>
   </div>
 </footer>
 
