update: nouvelle version du site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amazigh TV: Films et Courts Métrages Kabyles en Streaming</title>
   
-  <!-- Meta Tags SEO -->
   <meta name="description" content="Regardez des films et courts métrages Kabyles en streaming gratuit. Comédie, drame, action - La meilleure collection de cinéma Amazigh.">
   <meta property="og:title" content="Amazigh TV - Cinéma Kabyle en Streaming">
   <meta property="og:description" content="Films et courts métrages Kabyles en HD. Pucci, Qezbul et bien d'autres.">
@@ -46,8 +45,7 @@
       </button>
       <div class="hero-metadata">
         <span><i class="fas fa-star"></i> 4.5/5</span>
-        <span><i class="fas fa-clock"></i> 120 min</span>
-        <span><i class="fas fa-tags"></i> Comédie</span>
+        <span><i class="fas fa-clock"></i> 80 min</span> <span><i class="fas fa-tags"></i> Comédie</span>
       </div>
     </div>
   </section>
@@ -63,8 +61,7 @@
         </div>
         <div class="film-info">
           <h4>Pucci 1</h4>
-          <p>Comédie, 120 min</p>
-        </div>
+          <p>Comédie, 80 min</p> </div>
       </article>
 
       <article class="film-card" data-video-id="video-qezbul1">
@@ -125,7 +122,6 @@
     </div>
   </section>
 
-  <!-- Schema.org pour SEO -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -136,7 +132,6 @@
   }
   </script>
 
-  <!-- VOTRE CODE ADS ORIGINAL pour la détection AdBlock -->
   <div id="data-check-box" class="data-validator-container block-300x250"></div>
 </main>
 
@@ -145,9 +140,7 @@
     <p>&copy; 2025 Amazigh TV. Tous droits réservés.</p>
     <p>Une initiative de la communauté Kabyle. <a href="mailto:contact@amazightv.com">Contactez-nous</a></p>
     
-    <!-- Nouveau système de statistiques -->
-   
-     <div class="visitor-badge-container">
+    <div class="visitor-badge-container">
         <img src="https://visitor-badge.laobi.icu/badge?page_id=amazighflix-home&countColor=%23e50914&style=flat-square"
              alt="Nombre de visiteurs" class="visitor-badge" />
         <span class="visitor-text">Visites totales</span>
@@ -156,7 +149,6 @@
   </div>
 </footer>
 
-<!-- Modal AdBlock -->
 <div id="modal-access-denied" class="modal">
   <div class="modal-content modal-access-denied-content">
     <span class="close-button" data-modal-type="access-denied">&times;</span>
@@ -173,7 +165,6 @@
   </div>
 </div>
 
-<!-- Modal Vidéo avec état de chargement -->
 <div id="generic-video-modal" class="modal">
   <div class="modal-content modal-video-content">
     <span class="close-button" data-modal-type="generic">&times;</span>
@@ -195,11 +186,8 @@
   </div>
 </div>
 
-<!-- Scripts -->
-<script src="visitor-counter.js"></script>
 <script src="script.js"></script>
 
-<!-- VOS CODES ADS ORIGINAUX - NE PAS CHANGER -->
 <script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
 </body>
 </html>
