Mise à jour du site avec la nouvelle vidéo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/logo.png">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -144,6 +146,16 @@
 
     </div>
   </section>
+
+  <script type="application/ld+json">
+  {
+   "@context": "https://schema.org",
+   "@type": "Organization",
+   "name": "Amazigh TV",
+   "url": "https://amazigh-tv.vercel.app",
+   "logo": "https://amazigh-tv.vercel.app/images/logo.png"
+  }
+  </script>
 
   <script type="application/ld+json">
   {
