Mise à jour du site avec la nouvelle vidéo

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
   <meta property="og:image" content="/images/og-image.jpg">
   
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/logo.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/logo.png">
-  
+ <!-- Favicon navigateur -->
+<link rel="icon" type="image/png" sizes="32x32" href="/images/logo-32.png">
+
+<!-- Apple touch icon pour iOS -->
+<link rel="apple-touch-icon" sizes="180x180" href="/images/logo-180.png">
+
+<!-- Favicon fallback classique -->
+<link rel="shortcut icon" href="/images/logo-32.png" type="image/x-icon">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
@@ -153,7 +158,7 @@
    "@type": "Organization",
    "name": "Amazigh TV",
    "url": "https://amazigh-tv.vercel.app",
-   "logo": "https://amazigh-tv.vercel.app/images/logo.png"
+   "logo": "https://amazigh-tv.vercel.app/images/logo-512.png"
   }
   </script>
 
