--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
   <meta property="og:image" content="/images/og-image.jpg">
   
   <link rel="stylesheet" href="style.css">
- <!-- Favicon navigateur -->
-<link rel="icon" type="image/png" sizes="32x32" href="/images/logo-32.png">
+ <link rel="icon" type="image/png" sizes="32x32" href="/images/logo-32.png">
 
-<!-- Apple touch icon pour iOS -->
 <link rel="apple-touch-icon" sizes="180x180" href="/images/logo-180.png">
 
-<!-- Favicon fallback classique -->
 <link rel="shortcut icon" href="/images/logo-32.png" type="image/x-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,8 +23,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -167,8 +163,17 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Amazigh TV",
-    "description": "Films et courts métrages Kabyles en streaming",
-    "url": "https://amazigh-tv.vercel.app"
+    "url": "https://amazigh-tv.vercel.app/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://amazigh-tv.vercel.app/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://amazigh-tv.vercel.app/images/logo-180.png"
+    },
+    "description": "Films et courts métrages Kabyles en streaming"
   }
   </script>
 
