Mise à jour du site avec la nouvelle vidéo

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
     <h3>Explorer les Œuvres</h3>
     <div class="film-grid">
 
+          <article class="film-card" data-video-id="video-limucucu1">
+        <div class="film-poster">
+          <img src="images/li mucucu 1.jpg" alt="li mucucu - Film comedie Kabyle" loading="lazy">
+          <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+        </div>
+        <div class="film-info">
+          <h4>Li mucucu 1</h4>
+          <p>Comédie, 74 min</p>
+        </div>
+      </article>
       
       <article class="film-card" data-video-id="video-narnia1">
         <div class="film-poster">
