Mise à jour du site avec la nouvelle vidéo

--- a/films.html
+++ b/films.html
@@ -60,7 +60,7 @@
           <article>
             <div class="film-poster">
               <img src="images/li mucucu 1.jpg" alt="li mucucu - Film comedie Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
               <h4>Li mucucu 1</h4>
@@ -73,7 +73,7 @@
           <article>
             <div class="film-poster">
               <img src="images/narnia 1.jpg" alt="narnia 1 - Film Fantastique Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
               <h4>Narnia 1</h4>
@@ -86,7 +86,7 @@
           <article>
             <div class="film-poster">
               <img src="images/qezbul 1.jpg" alt="Qezbul 1 - Film comédie Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
               <h4>Qezbul 1</h4>
@@ -107,12 +107,12 @@
             </div>
           </article>
         </a>
-        
+
         <a href="films/pucci2.html" class="film-card">
           <article>
             <div class="film-poster">
               <img src="images/pucci2.jpg" alt="Pucci 2 - Film comédie Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+             <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
               <h4>Pucci 2</h4>
@@ -125,7 +125,7 @@
           <article>
             <div class="film-poster">
               <img src="images/pucci4.jpg" alt="Pucci 4 - Film comédie Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
               <h4>Pucci 4</h4>
@@ -138,7 +138,7 @@
           <article>
             <div class="film-poster">
               <img src="images/pucci5.webp" alt="Pucci 5 - Film drame Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
               <h4>Pucci 5</h4>
@@ -151,7 +151,7 @@
           <article>
             <div class="film-poster">
               <img src="images/pucci3.jpg" alt="Pucci 3 - Film action Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
               <h4>Pucci 3</h4>
