--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
     <h3>Films en Vedette</h3>
     <div class="film-grid">
 
-      <a href="films/pucci1.html" class="film-card">
+      <a href="films/narnia1.html" class="film-card">
         <article>
           <div class="film-poster">
-            <img src="images/pucci1.jpg" alt="Pucci 1 - Film comédie Kabyle" loading="lazy">
+            <img src="images/narnia 1.jpg" alt="Pucci 1 - Film Fantastique Kabyle" loading="lazy">
             <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
           </div>
           <div class="film-info">
-            <h4>Pucci 1</h4>
-            <p>Comédie, 80 min</p>
+            <h4>Narnia 1</h4>
+            <p>Fantastique, 127 min</p>
           </div>
         </article>
       </a>
@@ -136,7 +136,7 @@
         <article>
           <div class="film-poster">
             <img src="images/li mucucu 1.jpg" alt="Li mucucu - Film comedie Kabyle" loading="lazy">
-            <div class="play-overlay"><i class="fas fa-info-circle play-icon-lg"></i></div>
+          <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
           </div>
           <div class="film-info">
             <h4>Li mucucu 1</h4>
