--- a/films/narnia1.html
+++ b/films/narnia1.html
@@ -293,15 +293,16 @@
   <section class="video-section">
     <h3>Regarder Narnia 1 en Streaming HD</h3>
     <div class="video-responsive-container">
-        <div id="video-play-overlay">
-            <i class="fas fa-play play-icon-lg"></i>
-        </div>
-        <iframe id="video-iframe-player" src="" frameborder="0" allow="autoplay; fullscreen" allowfullscreen title="Lecteur vidéo pour le film Narnia 1"></iframe>
-        <div class="video-loading" id="video-loading-player" style="display: none;">
-            <i class="fas fa-spinner fa-spin loading-pulse"></i>
-            <p>Chargement de la vidéo...</p>
-        </div>
+    <div id="video-play-overlay">
+        <i class="fas fa-play play-icon-lg"></i>
     </div>
+    <iframe id="video-iframe-player" src="" allow="autoplay; fullscreen" allowfullscreen title="Lecteur vidéo Narnia 1"></iframe>
+    <div class="video-loading" id="video-loading-player" style="display: none;">
+        <i class="fas fa-spinner fa-spin loading-pulse"></i>
+        <p>Chargement de la vidéo...</p>
+    </div>
+</div>
+
   </section>
   
   <section class="film-list-section suggested-films">
@@ -364,52 +365,60 @@
 <script>
 document.addEventListener('DOMContentLoaded', () => {
     const playButton = document.querySelector('.hero-play-button');
+    const playOverlay = document.getElementById('video-play-overlay');
     const videoIframe = document.getElementById('video-iframe-player');
     const videoLoading = document.getElementById('video-loading-player');
-    const playOverlay = document.getElementById('video-play-overlay');
 
+    // Lien de la vidéo
     const videoData = {
         'video-narnia1': { 
             link: 'https://dsvplay.com/e/11961y4m8yua'
         }
     };
-    
+
     function launchVideo() {
         const videoId = playButton.dataset.videoId;
         const videoInfo = videoData[videoId];
 
-        if (videoInfo) {
-            playOverlay.style.display = 'none';
-            videoLoading.style.display = 'flex';
-            videoIframe.style.display = 'none';
-            videoIframe.src = videoInfo.link;
-
-            document.querySelector('.video-section').scrollIntoView({
-                behavior: 'smooth',
-                block: 'center'
-            });
-
-            videoIframe.onload = () => {
-                videoLoading.style.display = 'none';
-                videoIframe.style.display = 'block';
-            };
-
-            videoIframe.onerror = () => {
-                videoLoading.innerHTML = `
-                    <i class="fas fa-exclamation-triangle"></i>
-                    <p>Erreur de chargement de la vidéo</p>
-                    <button onclick="location.reload()" class="cta-button">Réessayer</button>
-                `;
-            };
-        } else {
+        if (!videoInfo) {
             alert('Vidéo non disponible pour le moment.');
+            return;
         }
+
+        // Préparation
+        playOverlay.style.display = 'none';
+        videoLoading.style.display = 'flex';
+        videoIframe.style.display = 'none';
+        videoIframe.src = videoInfo.link;
+
+        // Scroll vers la vidéo
+        document.querySelector('.video-section').scrollIntoView({
+            behavior: 'smooth',
+            block: 'center'
+        });
+
+        // Quand la vidéo est prête
+        videoIframe.onload = () => {
+            videoLoading.style.display = 'none';
+            videoIframe.style.display = 'block';
+        };
+
+        // Gestion des erreurs
+        videoIframe.onerror = () => {
+            videoLoading.innerHTML = `
+                <i class="fas fa-exclamation-triangle"></i>
+                <p>Erreur de chargement de la vidéo</p>
+                <button onclick="location.reload()" class="cta-button">Réessayer</button>
+            `;
+        };
     }
 
+    // Événements
     playButton.addEventListener('click', launchVideo);
     playOverlay.addEventListener('click', launchVideo);
 });
 </script>
+>
 <script type='text/javascript' src='//pl27872732.effectivegatecpm.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
 
 </body>
