Mise à jour du site avec la nouvelle vidéo

--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -369,7 +369,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const videoData = {
         'video-qezbul1': { 
-            link: 'https://dsvplay.com/e/za8jrxvpw6rq'
+            link: 'https://streamtape.com/e/QbgypGOLYAH99m'
         }
     };
     
