--- a/films/limucucu1.html
+++ b/films/limucucu1.html
@@ -368,7 +368,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const videoData = {
         'video-limucucu1': { 
-            link: 'https://dsvplay.com/e/85k2fxhne70q'
+            link: 'https://streamtape.com/e/jjo9qGYWaRuzAD2'
         }
     };
     
